# SomeDay

./: CLAUDE.md  README.md  bash.exe.stackdump
.claude/: settings.local.json
someday/: README.md  bash.exe.stackdump  index.html  package-lock.json  package.json
someday/src-tauri/: Cargo.toml  InstallationLog.txt  bash.exe.stackdump  tauri.conf.json
someday/src-tauri/src/: lib.rs  main.rs
someday/src/components/archive/: ArchiveList.vue
someday/src/components/calendar/: DayColumn.vue  MonthCalendar.vue  WeekCalendar.vue
someday/src/components/common/: AppButton.vue  AppCheckbox.vue  AppInput.vue  AppModal.vue
someday/src/components/layout/: AppLayout.vue  AppSidebar.vue
someday/src/components/projects/: ProjectCard.vue  ProjectList.vue
someday/src/router/: index.ts
someday/src/stores/: archiveStore.ts  index.ts  projectStore.ts  settingsStore.ts  taskStore.ts  uiStore.ts
someday/src/styles/: main.css
someday/src/types/: index.ts  project.ts  settings.ts  task.ts
someday/src/views/: ArchiveView.vue  CalendarView.vue  DashboardView.vue  ProjectsView.vue  SettingsView.vue  StatisticsView.vue
stitch_todo_list/: prd.html
stitch_todo_list/_1/: code.html
stitch_todo_list/_2/: code.html
stitch_todo_list/_3/: code.html
stitch_todo_list/_4/: code.html
stitch_todo_list/_5/: code.html
stitch_todo_list/_6/: code.html
stitch_todo_list/_7/: code.html
stitch_todo_list/_8/: code.html
stitch_todo_list/aeon_minimalist/: DESIGN.md
stitch_todo_list/data_analysis/: code.html
stitch_todo_list/project_20260408/: code.html
(+5 files in other folders)
